display & update avatar; upload with

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11699,3 +11699,10 @@ body {
   font-size: 0.75rem;
   border-radius: 0.25rem !important;
 }
+
+/* custom css */
+.input-file{
+  #file{
+    display: none;
+  }
+}
